--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.10.3",
+    "aos": "^2.3.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "boxicons": "^2.1.4",
     "classnames": "^2.3.2",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.0.3",
     "jspdf": "^2.5.1",
     "lightbox.js-react": "^0.9.6",
     "react": "^18.2.0",
