--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "boxicons": "^2.1.4",
     "classnames": "^2.3.2",
     "font-awesome": "^4.7.0",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "jspdf": "^2.5.1",
     "lightbox.js-react": "^0.9.6",
@@ -40,7 +41,8 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "set PORT=2121 && react-scripts start",
